# vtk

./: .gitignore  Cargo.toml  README.md
benches/: field3d_iter.rs  write_binary.rs
derive/: Cargo.toml
derive/src/: dataarray.rs  lib.rs  parse_dataarray.rs  utils.rs
src/: array.rs  combine_vtk.rs  data.rs  iter.rs  lib.rs  mesh.rs  mod.rs  parse.rs  prelude.rs  traits.rs  utils.rs  write_vtk.rs  xml_parse.rs
src/array/: field_2d.rs  field_3d.rs  mod.rs  scalar_2d.rs  scalar_3d.rs  vector.rs  vector_2d.rs  vector_3d.rs
src/mesh/: dim_2.rs  dim_3.rs  mod.rs
src/parse/: error.rs  event_summary.rs  mod.rs
static/: sample_vtk_file.vtk
test_vtks/: simple_vector_array.vtk
tests/: domains_compile.rs  fields_compare.rs  float32_write.rs  read_write_vtk.rs
