[package]
name = "vtk"
version = "0.4.0"
authors = ["VanillaBrooks <brooks@karlik.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
ryu = "1.0.5"
thiserror = "1.0.25"
base64 = "0.13.0"
quick-xml = "0.26.0"

vtk-derive = {path="./derive", optional=true}
ndarray = "0.15.4"
derive_more = "0.99.17"
num-traits = "^0.2.0"

[dev-dependencies]
criterion = "0.3"
ndarray-rand = "0.14.0"

[features]
default = ["derive"]
derive = ["vtk-derive"]

[[bench]]
name = "field3d_iter"
harness = false

[[bench]]
name = "write_binary"
harness = false
