[package]
name = "vtk-derive"
version = "0.1.0"
authors = ["VanillaBrooks <brooks@karlik.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.73"
quote = "1.0.9"
proc-macro2 = "1.0.27"
darling = "0.13.0"

[dev-dependencies]
vtk = {path="../"}
